change user model
it also change doctor and patient model. as patient and
doctor is a kind of user. we don't need to store some common
property in different places. so I moved everything common
in doctor and patient in user model.
