# models/doctor.js
@@ -6,30 +6,21 @@ const Doctor = mongoose.model('Doctor', new mongoose.Schema({
         type: mongoose.Schema.Types.ObjectId,
         required: true
     },
-    name: {
-        type: String,
-        required: true,
-        minLength: 3,
-        maxLength: 50
-    },
-    address: {
+
+    license: {
         type: String,
         required: true
     },
-    age: {
-        type: Number,
-        required: true
-    },
-    phone: {
+
+    degrees: [{
         type: String,
-        required: true,
-        minLength: 11,
-        maxLength: 11
-    },
+    }],
+
     createdAt: {
         type: Date,
         default: Date.now()
     },
+
     updatedAt: {
         type: Date,
         default: Date.now()
@@ -39,10 +30,8 @@ const Doctor = mongoose.model('Doctor', new mongoose.Schema({
 function validateDoctor(patient) {
     const schema = {
         _id: Joi.string().required(),
-        name: Joi.string().min(3).max(50).required(),
-        address: Joi.string().required(),
-        age: Joi.number().required(),
-        phone: Joi.string().min(11).max(11).required(),
+        license: Joi.string().required(),
+        degrees: Joi.array().items(Joi.string()),
         createdAt: Joi.date(),
         updatedAt: Joi.date(),
     };
