# routes/prescriptions.js
@@ -10,8 +10,8 @@ router.get('/:doctorId/:patientId', async (req, res) => {
     res.send(prescriptions);
 });
 
-router.post('/:doctorId/:patientId', async (req, res) => {
-    const {doctorId, patientId} = req.params;
+router.post('/', async (req, res) => {
+    const {doctorId, patientId} = req.body;
     const {error} = validate(req.body);
     if(error) {
         return res.status(400).send(error.details[0].message);
